# course.kub

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  notebooks.yml
database/day1/FMUs/: Exercises_Conduction_ComWalSys_03.fmu  Exercises_Conduction_ComWalSys_04.fmu  Exercises_Conduction_SteStaWalResCon_01.fmu  Exercises_Conduction_SteStaWalResCon_02.fmu  Exercises_Infra_Red_Radiation_7.fmu  Exercises_LossAssesment_SolarGainFluxInjectionRegulated_8_3.fmu  Exercises_LossAssesment_SolarGainFluxInjectionSizing_8_1.fmu  Exercises_LossAssesment_SolarGainFluxInjection_8_2.fmu  Exercises_LossAssesment_parallelCircuits_9.fmu  Exercises_SolarRadiation_5.fmu  Exercises_SolarRadiation_6.fmu
database/day2/BuildingModels/: Exercices_Optimization_LoD0Bui4Walls1Floor1Roof_App4Walls1Floor1Roof.fmu  Exercices_Optimization_LoD0Bui4WallsGlazed1Floor1Roof_App4WallsGlazed1Floor1Roof.fmu  Exercices_Optimization_LoD0Bui4WallsGlazed1GableRoof_AppLoD0Bui4WallsGlazed1GableRoof.fmu
database/day2/HeatWave/: Marseille2003.csv  Marseille2003.json  Paris2003.csv
database/day2/YearlyWeather/: Strasbourg2023.csv  Strasbourg2023.json  weatherCity1_2024.csv  weatherCity1_2024.json  weatherCity2_2024.csv  weatherCity2_2024.json
notebooks/trainingDay1/: conduction.ipynb  infraredRadiation.ipynb  lossAssesment.ipynb  solarRadiation.ipynb
notebooks/trainingDay2/: caseStudy1.ipynb  caseStudy2.ipynb  caseStudy3.ipynb  weather.ipynb
src/python/ktirio/: __init__.py
src/python/ktirio/ub/: __init__.py
src/python/ktirio/ub/course/plotlib/: __init__.py  simulationPlotFactory.py  weatherPlotFactory.py
src/python/ktirio/ub/course/simlib/: __init__.py  materials.py  simulation.py
src/python/kub/: __init__.py
src/python/kub/course/: __init__.py
src/python/kub/course/plotlib/: __init__.py  basePlotFactory.py  simulationPlotFactory.py  weatherPlotFactory.py
src/python/kub/course/simlib/: __init__.py  materials.py  simulation.py
tests/: __init__.py  conftest.py  test_materials.py  test_plotlib.py  test_simulation.py
trainingDay1/: solarRadiation.ipynb
